# andiamo-travel

./: .env.example  .gitignore  AGENTS.md  drizzle.config.ts  package-lock.json  package.json
orchestrator/: CONTRACT.md  GUIDE.md  README.md  pyproject.toml
orchestrator/app/: assemble.py  claude.py  critic.py  fanout.py  main.py  models.py  orchestrator.py  sse.py  stub.py  stub_itinerary.json  worker.py
orchestrator/tests/: test_assemble.py  test_fanout.py  test_live.py  test_models_roundtrip.py  test_service.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/generate/: route.ts
src/app/api/generate-orchestrated/: route.ts
src/app/api/geocode/: route.ts
src/app/api/intake/: route.ts
src/app/api/place-photo/: route.ts
src/app/api/stops/: route.ts
src/app/api/weather/: route.ts
src/app/trips/: page.tsx
src/app/trips/[id]/: page.tsx
src/components/: place-photo.tsx
src/components/canvas/: copilot-bar.tsx  day-column.tsx  map-pane.tsx  map-sheet.tsx  numbering.ts  pacing.ts  sortable-stop.tsx  stop-card.tsx  stop-editor.tsx  today-view.tsx  travel-chip.tsx  trip-canvas.tsx  trip-workspace.tsx  types.ts  use-canvas-dnd.ts  use-is-desktop.ts  use-travel-times.ts
src/components/intake/: intake-chat.tsx  itinerary-preview.tsx  trip-summary-panel.tsx  types.ts
src/components/landing/: hero.tsx  pillars.tsx
src/db/: chat.ts  client.ts  poi-library.ts  schema.ts  trips.ts  verify.ts
src/lib/: place-photos.ts  places.ts  routes.ts  weather.ts
src/lib/ai/: copilot.ts  generate.ts  intake.ts  partial-itinerary.ts  schemas.ts
(+9 files in other folders)
